# ros2kdb

./: .gitignore  CMakeLists.txt  README.md  functions.sh  package.xml
binMe/: fileTest.cpp
binMe/msg/: EdfOutput.msg  ExhaustOutput.msg
config/: Clients.csv  Publishers.csv  Servers.csv  Subscribers.csv  cKDBAccessors.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/febkdb/share/febkdb/: package.bash  package.zsh
install/ros2kdb/share/ros2kdb/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
msg/: ElevonInput.msg  antenna.msg2  exhaust_input.msg  locate.msg
q/: ros.q  rosPub.q  rosSub.q  rosSvcClnt.q  rosSvcSrv.q  test.q
src/: WorkingPubTest.cpp  buildClient.sh  buildPublisher.sh  buildScripts.sh  buildServer.sh  buildSubscriber.sh  clientTest.cpp  definitions.sh  hello.cpp  kdbpub.cpp  kdbsub.cpp  newSubKdb.cpp  pubTest.cpp  serviceTest.cpp  subTest.cpp  template  templatePub  templatePub.cpp  templateSub.cpp
src/buildScripts/: buildClient.sh  buildPublisher.sh  buildServer.sh  buildSubscriber.sh
src/run/: client.cpp  client_1.cpp  publish.cpp  publish_1.cpp  publish_3.cpp  server.cpp  server_1.cpp  subscribe.cpp  subscribe_1.cpp
src/templates/: Clnt.cpp  Clnt1.cpp  Pub.cpp  Srv.cpp  Sub.cpp
src/testFiles/: clientTest.cpp  pubTest.cpp  subTest.cpp
